[metadata]
name = AndroidsSystemFileChooser
version = 0.0.8
author = Mathias Lindström
description = Android's SystemFileChooser with Kivy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kuzeyron/AndroidsSystemFileChooser
license = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src